--- a/res/values-zh-rcn/strings.xml
+++ b/res/values-zh-rcn/strings.xml
@@ -11,4 +11,5 @@
     <string name="toast_success">成功</string>
     <string name="toast_devicenotfound">蓝牙设备\"{0}\"未找到</string>
     <string name="toast_enablebluetooth">请先开启蓝牙</string>
+    <string name="sending">发送中</string>
 </resources>
